Fix selection background color in dark mode

--- a/src/assets/themes.css
+++ b/src/assets/themes.css
@@ -30,5 +30,5 @@
 }
 
 .dark ::selection {
-	background-color: #bcbcbc;
+	background-color: #696969;
 }
